--- a/index.html
+++ b/index.html
@@ -446,7 +446,6 @@ ul li {
     padding-top: 45px;
     padding-bottom: 0;
 
-
 }
 #contact ::selection {
     color:#7F8289;
@@ -467,7 +466,7 @@ ul li {
 
 }
 #contact #contact-form input[type="text"], #contact #contact-form  textarea {
-  border-radius: 10px;
+  border-radius: 20px;
     color:#7F8289;
     font-size: 12px;
     padding: 15px 0;
@@ -480,7 +479,7 @@ ul li {
     position:relative;
 }
 #contact #contact-form input[type="submit"] {
-  border-radius: 10px;
+  border-radius: 15px;
     float:none;
 }
 #contact .error_message {
@@ -526,7 +525,7 @@ ul li {
     width: 150px;
     background:#26292E;
     transition: all 0.3s;
-    border-color: #fff;
+    border-color: grey;
     border-style: solid;
     border-width: 2px;
     transform: scale(1.2);
@@ -857,19 +856,14 @@ a.fa.fa-angle-down:hover{
     transition: 500ms;
 }
 .joinbutton {
-  border:none;
-    border-radius: 10px;
+    background-color: #1D1D1D; border-color: grey; border-radius: 10px; border-style: solid; border-width: 2px;
     padding:14px 20px;
     line-height:14px;
     cursor:pointer;
     font-size:15px;
     color:#fff;
     -webkit-appearance: none;
-    background:#26292E;
     transition: all 0.3s;
-    border-color: #fff;
-    border-style: solid;
-    border-width: 2px;
     transform: scale(1.2);
     text-shadow: 0px 0px 1px black;
 }
@@ -899,9 +893,9 @@ a.fa.fa-angle-down:hover{
     font-weight: 300;
 }
 .section-title.center .line{
-    border-top: 4px solid aqua;
-    height: 10px;
-    width: 80px;
+    background-color: aqua;
+    height: 4px;
+    width: 120px;
     text-align: center;
     margin: 0 auto;
     margin-top: 20px;
@@ -959,7 +953,7 @@ a.fa.fa-angle-down:hover{
   <div class="arrow-1 animated hinge infinite zoomIn"></div>
 </div></a>
 <div id="about">
-    <div class="container">
+    <div style="background-color: #1D1D1D; border-color: grey; border-radius: 30px; border-style: solid; border-width: 3px;" class="container">
         <div class="section-title center text-center">
             <h2 style="padding-top: 20px; padding-bottom: 10px;"><strong style="font-size:1.5em">About Us</strong></h2>
             <div class="line">
@@ -971,26 +965,31 @@ a.fa.fa-angle-down:hover{
     Let's be honest, everyone loves cats. What else could you possibly love more than cats? 🐾<br><br>Well, how about the smartphone on the side of your bed?<br>Or the computer on your desk?<br>Or the console set up in your living room?<br>Or the iPad that your grandma forgot on the couch?<br><br>You love technology, but how much do you really know about it?<br>Here at OpenEyes, we want to help you understand your personal devices a little bit more.<br>We're not just some silly repair shop! We want you to see what's actually happening behind closed doors!<br><br>Broke your phone screen? No problem!<br>We'll fix it in front of you <bold style="font-size: 1em; font-weight:bolder">and</bold> show you exactly what's happening! For no additional cost!<br>
 
 
-    <h2 style="padding-top: 50px; padding-bottom: 50px;">
-            <strong style="font-size:1.5em">Need a repair?</strong><br>
-            <p>Schedule a visit with us now!</p>
-            <a href="socials.html" class="joinbutton">Contact Us!</a>
-          </h2>   <br>
+    
+<br><br>
 
-
-
-
+<br>
           <strong>OpenEyes: Your go-to shop for computer repair</strong><li class="footertext">Instructional repair for all devices</li><li class="footertext">Free online tools and resources</li><li class="footertext">Learn how to install hardware</li>
   </p>
-<a href="learn.html" class="joinbutton">Learn more!</a> <br><br>   
+<a href="learn.html" style="font-size: 25px;" class="joinbutton">Free Online Learning Course</a> <br><br>   
   </div>
+
+<br>
+
+
 
 </div>
 </div>
 </div> 
-
-<div id="contact" class="text-center">
-    <div style="background-color: #1D1D1D; border-color: white; border-radius: 5px; border-style: solid; border-width: 3px;" class="container">
+<div class="section-title center text-center">
+<h2 style="padding-top: 50px; padding-bottom: 50px;">
+            <strong style="font-size:1.5em">Need a repair?</strong><br>
+            <p>Schedule a visit with us now!</p><br>
+            <a href="socials.html" class="joinbutton">Contact Us</a>
+          </h2> 
+</div>
+<div id="contact" class="container text-center">
+    <div style="background-color: #1D1D1D; border-color: grey; border-radius: 30px; border-style: solid; border-width: 3px;" class="container">
         <div class="section-title center">
             <h2>Subscribe</h2>
             <div class="line">
@@ -1019,21 +1018,16 @@ a.fa.fa-angle-down:hover{
     <div class="footer-top">
         <div class="container text-center">
             <div class="footer-logo">
-                <a style="font-size:200%; flex-wrap: nowrap;">OpenEyes - 2023 FBLA Regionals</a>
+                <a style="font-size:200%; flex-wrap: nowrap;">OpenEyes - 2023 FBLA State</a>
             </div>
             
         </div>
     </div>
     <div class="footer-bottom">
         <div class="container">
-            <div class="row">
-                <div class="col-sm-6">
-                    <p class="footertext">© 2023 Jagger</p>
+                <div>
+                    <p style="text-align: center; position: relative; bottom: 20px">Developed by <a style="color: aqua">Jagger</a> and <a style="color: aqua" >Kenneth</a></p>
                 </div>
-                <div class="col-sm-6">
-                    <p class="pull-right footertext">Developed by <a class="footertext" href="https://www.instagram.com/zvrcx">Jagger</a> and <a class="footertext" href="https://www.instagram.com/dreamwastee">Marci</a></p>
-                </div>
-            </div>
         </div>
     </div>
 </footer>
