--- a/slideshow.html
+++ b/slideshow.html
@@ -314,8 +314,8 @@
                   <div class="text" style="">
                     <p>OpenEyes - Innovating in the Technology Industry</p>
                   </div>
-                  <a href="index.html#about" target="_top" class="btn" style="">
-                    <span class="btn-inner">About Us</span>
+                  <a href="socials.html" target="_top" class="btn" style="">
+                    <span class="btn-inner">Schedule a visit</span>
                   </a>
                 </div>
               </div>
@@ -329,8 +329,8 @@
                   <div class="text" style="">
                     <p>Open your eyes, widen your intelligence</p>
                   </div>
-                  <a href="index.html#about" target="_top" class="btn" style="">
-                    <span class="btn-inner">About Us</span>
+                  <a href="socials.html" target="_top" class="btn" style="">
+                    <span class="btn-inner">Schedule a visit</span>
                   </a>
                 </div>
               </div>
@@ -344,8 +344,8 @@
                   <div class="text" style="">
                     <p>Shaping the world of technology</p>
                   </div>
-                  <a href="index.html#about" target="_top" class="btn" style="">
-                    <span class="btn-inner">About Us</span>
+                  <a href="socials.html" target="_top" class="btn" style="">
+                    <span class="btn-inner">Schedule a visit</span>
                   </a>
                 </div>
               </div>
@@ -359,8 +359,8 @@
                   <div class="text" style="">
                     <p>Allow your technological mindset to expand</p>
                   </div>
-                  <a href="index.html#about" target="_top" class="btn" style="">
-                    <span class="btn-inner">About Us</span>
+                  <a href="socials.html" target="_top" class="btn" style="">
+                    <span class="btn-inner">Schedule a visit</span>
                   </a>
                 </div>
               </div>
