--- a/index.html
+++ b/index.html
@@ -37,43 +37,75 @@
       font-family: 'Jost';
       scroll-behavior: smooth;
     }
-
-    @media only screen and (max-width:767px) {
-      .container {
-        padding: 20px;
-      }
-      .main-text {
-        position: relative;
-        transform: scale(0.7);
-        right: 40px;
-        top: -35px;
-        letter-spacing: 5;
-      }
-      .main-text:hover {
-        letter-spacing: 15;
-      }
-      .footer-top {
-max-height: 10%;
-      }
-      .footer-logo {
-        font-size: 0.5em;
-        flex-wrap: nowrap;
-      }
-      .footertext {
-        font-size: 0.8em;
-        flex-wrap: nowrap;
-      }
-      #navbar-collasped {
-  background-color: rgba(0, 0, 0, 0.79);
-  border-width: 0;
-  position: absolute;
-  padding-left: 1.7em;
-  padding-right: 1.7em;
-  right: 2em;
-  border-radius: 15px;
-
+@media (min-width: 768px){}
+.container {
+    width: auto;
 }
-    }
+ @media only screen and (max-width:407px) {
+      .freecourse {
+        display: flex;
+        width: 25rem;
+        position: relative;
+        right: -40;
+      }}
+          @media only screen and (max-width:767px) {
+        .container {
+          padding: 20px;
+        }
+        .name {
+            position: relative;
+            bottom: 200px;
+        }
+        .footerbottom {
+  font-size: 20px;
+}
+.list-item {
+  font-size: 17px !important;
+}
+.card__read-more{
+  transform: scale(0.6);
+}
+        .main-text {
+          position: relative;
+          transform: scale(0.7);
+          right: 40px;
+          top: -35px;
+          letter-spacing: 5;
+
+        }
+
+        .main-text:hover {
+          letter-spacing: 15;
+        }
+
+        .footer-top {
+          max-height: 10%;
+        }
+
+        .footer-logo {
+          font-size: 0.45em;
+          flex-wrap: nowrap;
+        }
+.footerbottom a {
+          font-size: 1em;
+          flex-wrap: nowrap;
+        }
+
+        .footertext {
+          font-size: 0.8em;
+          flex-wrap: nowrap;
+        }
+
+        #navbar-collasped {
+          background-color: rgba(0, 0, 0, 0.79);
+          border-width: 0;
+          position: absolute;
+          padding-left: 1.7em;
+          padding-right: 1.7em;
+          right: 2em;
+          border-radius: 15px;
+        }
+      }
 
 ::-webkit-scrollbar {
     width: 0;  /* Remove scrollbar space */
@@ -783,6 +815,8 @@ a.fa.fa-angle-down:hover{
     text-shadow: 0px 0px 5px black;
     text-decoration: none;
     transition: all 0.5s;
+    overflow-wrap: nowrap;
+
 }
 .footer-logo a:hover{
     text-shadow: 0px 0px 15px aqua;
@@ -855,17 +889,18 @@ a.fa.fa-angle-down:hover{
     -o-transition: 500ms;
     transition: 500ms;
 }
-.joinbutton {
+.joinbutton, .freecourse {
     background-color: #1D1D1D; border-color: grey; border-radius: 10px; border-style: solid; border-width: 2px;
     padding:14px 20px;
     line-height:14px;
     cursor:pointer;
-    font-size:15px;
+    font-size:25px;
     color:#fff;
     -webkit-appearance: none;
     transition: all 0.3s;
     transform: scale(1.2);
     text-shadow: 0px 0px 1px black;
+    line-height: 1;
 }
 
 .joinbutton:hover {
@@ -892,10 +927,15 @@ a.fa.fa-angle-down:hover{
 .section-title.center h2{
     font-weight: 300;
 }
-.section-title.center .line{
+.section-title.center .linelong{
     background-color: aqua;
-    height: 4px;
-    width: 120px;
+    width: 60%;
+  border: double 4px transparent;
+  border-radius: 80px;
+  background-image: linear-gradient(white, white), radial-gradient(circle at top left, aqua,#8ae6ff,aqua);
+  background-origin: border-box;
+  box-shadow: 0px 0px 15px aqua;
+  background-clip: padding-box, border-box;
     text-align: center;
     margin: 0 auto;
     margin-top: 20px;
@@ -956,7 +996,7 @@ a.fa.fa-angle-down:hover{
     <div style="background-color: #1D1D1D; border-color: grey; border-radius: 30px; border-style: solid; border-width: 3px;" class="container">
         <div class="section-title center text-center">
             <h2 style="padding-top: 20px; padding-bottom: 10px;"><strong style="font-size:1.5em">About Us</strong></h2>
-            <div class="line">
+            <div class="linelong">
             </div>
         </div>
         <div class="row">
@@ -971,7 +1011,7 @@ a.fa.fa-angle-down:hover{
 <br>
           <strong>OpenEyes: Your go-to shop for computer repair</strong><li class="footertext">Instructional repair for all devices</li><li class="footertext">Free online tools and resources</li><li class="footertext">Learn how to install hardware</li>
   </p>
-<a href="learn.html" style="font-size: 25px;" class="joinbutton">Free Online Learning Course</a> <br><br>   
+<a href="learn.html" class="freecourse">Free Online Learning Course</a> <br><br>   
   </div>
 
 <br>
@@ -992,7 +1032,7 @@ a.fa.fa-angle-down:hover{
     <div style="background-color: #1D1D1D; border-color: grey; border-radius: 30px; border-style: solid; border-width: 3px;" class="container">
         <div class="section-title center">
             <h2>Subscribe</h2>
-            <div class="line">
+            <div class="linelong">
 
             </div>
         </div>
@@ -1001,8 +1041,8 @@ a.fa.fa-angle-down:hover{
         <div id="contact-form">
           <div id="message"></div>
           <form method="post" action="" name="contactform" id="contactform">
-            <input name="email" type="text" style="width: 48%; position: relative; left:-10px;" id="email" placeholder="First Name *" required>
-            <input name="email" type="text" style="width: 48%; position: relative; left:10px;" id="email" placeholder="Last Name *" required>
+            <input name="email" type="text" style="width: 49%; position: relative; left:-4px;" id="email" placeholder="First Name *" required>
+            <input name="email" type="text" style="width: 49%; position: relative; left:4px;" id="email" placeholder="Last Name *" required>
             <input name="email" type="text" id="email" placeholder="Email *" required>
             <input name="email" type="text" id="email" placeholder="Address (optional)">
             <input type="submit" class="send_message transition" id="submit" value="Subscribe Now!">
@@ -1026,7 +1066,7 @@ a.fa.fa-angle-down:hover{
     <div class="footer-bottom">
         <div class="container">
                 <div>
-                    <p style="text-align: center; position: relative; bottom: 20px">Developed by <a style="color: aqua">Jagger</a> and <a style="color: aqua" >Kenneth</a></p>
+                    <p class="footerbottom" style="text-align: center; position: relative; bottom: 20px">Developed by <a style="color: aqua">Jagger</a> and <a style="color: aqua" >Kenneth</a></p>
                 </div>
         </div>
     </div>
