--- a/learn.html
+++ b/learn.html
@@ -35,21 +35,35 @@
         font-family: 'Jost';
         
       }
-
+@media (min-width: 768px){}
+.container {
+    width: auto;
+}
       @media only screen and (max-width:767px) {
         .container {
           padding: 20px;
         }
+        html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+        .footerbottom {
+  font-size: 20px;
+}
+.bubbly-button {
+  transform: scale(0.6);
+}
+.card-contents span {
+  width: 500;
+  position: relative;
+  right: 160;
+  top: -100;
+}
 .list-item {
   font-size: 17px !important;
 }
-
 .card__read-more{
   transform: scale(0.6);
-}
-
-.footerbottom {
-  font-size: 20px;
 }
         .main-text {
           position: relative;
@@ -69,7 +83,11 @@
         }
 
         .footer-logo {
-          font-size: 0.5em;
+          font-size: 0.45em;
+          flex-wrap: nowrap;
+        }
+.footerbottom a {
+          font-size: 1em;
           flex-wrap: nowrap;
         }
 
@@ -984,8 +1002,13 @@ html {
 
       .section-title.center .line{
     background-color: aqua;
-    height: 4px;
-    width: 120px;
+    width: 60%;
+  border: double 4px transparent;
+  border-radius: 80px;
+  background-image: linear-gradient(white, white), radial-gradient(circle at top left, aqua,#8ae6ff,aqua);
+  background-origin: border-box;
+  box-shadow: 0px 0px 15px aqua;
+  background-clip: padding-box, border-box;
     text-align: center;
     margin: 0 auto;
     margin-top: 20px;
@@ -1113,10 +1136,12 @@ right:170%;
   background-color: #131313;
   border-radius: 15px;
   transition: all 0.8s;
+  z-index: -1;
 }
 
 .card__read-more--open{
   padding: 1em 2em;
+  z-index: 1;
   display: block;
   opacity: 1;
   max-height: 100rem;
@@ -1269,8 +1294,8 @@ cardHolder
         <div id="contact-form">
           <div id="message"></div>
           <form method="post" action="" name="contactform" id="contactform">
-            <input name="email" type="text" style="width: 48%; position: relative; left:-10px;" id="email" placeholder="First Name *" required>
-            <input name="email" type="text" style="width: 48%; position: relative; left:10px;" id="email" placeholder="Last Name *" required>
+            <input name="email" type="text" style="width: 49%; position: relative; left:-4px;" id="email" placeholder="First Name *" required>
+            <input name="email" type="text" style="width: 49%; position: relative; left:4px;" id="email" placeholder="Last Name *" required>
             <input name="email" type="text" id="email" placeholder="Email *" required>
             <input name="email" type="text" id="email" placeholder="Address (optional)">
             <input type="submit" class="send_message transition" id="submit" value="Subscribe Now!">
@@ -1284,7 +1309,7 @@ cardHolder
 </div>
   </body>
 </div>
-    <footer style="margin-top: 80px" id="footer">
+<footer style="margin-top: 80px" id="footer">
     <div class="footer-top">
         <div class="container text-center">
             <div class="footer-logo">
