--- a/resources.html
+++ b/resources.html
@@ -35,13 +35,29 @@
         font-family: 'Jost';
         
       }
-
+@media (min-width: 768px){}
+.container {
+    width: auto;
+}
       @media only screen and (max-width:767px) {
         .container {
           padding: 20px;
         }
+        html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
         .footerbottom {
   font-size: 20px;
+}
+.bubbly-button {
+  transform: scale(0.6);
+}
+.card-contents span {
+  width: 500;
+  position: relative;
+  right: 160;
+  top: -100;
 }
 .list-item {
   font-size: 17px !important;
@@ -67,7 +83,11 @@
         }
 
         .footer-logo {
-          font-size: 0.5em;
+          font-size: 0.45em;
+          flex-wrap: nowrap;
+        }
+.footerbottom a {
+          font-size: 1em;
           flex-wrap: nowrap;
         }
 
@@ -980,8 +1000,13 @@ html {
 
       .section-title.center .line{
     background-color: aqua;
-    height: 4px;
-    width: 120px;
+    width: 60%;
+  border: double 4px transparent;
+  border-radius: 80px;
+  background-image: linear-gradient(white, white), radial-gradient(circle at top left, aqua,#8ae6ff,aqua);
+  background-origin: border-box;
+  box-shadow: 0px 0px 15px aqua;
+  background-clip: padding-box, border-box;
     text-align: center;
     margin: 0 auto;
     margin-top: 20px;
@@ -1291,8 +1316,8 @@ cardHolder
         <div id="contact-form">
           <div id="message"></div>
           <form method="post" action="" name="contactform" id="contactform">
-            <input name="email" type="text" style="width: 48%; position: relative; left:-10px;" id="email" placeholder="First Name *" required>
-            <input name="email" type="text" style="width: 48%; position: relative; left:10px;" id="email" placeholder="Last Name *" required>
+            <input name="email" type="text" style="width: 49%; position: relative; left:-4px;" id="email" placeholder="First Name *" required>
+            <input name="email" type="text" style="width: 49%; position: relative; left:4px;" id="email" placeholder="Last Name *" required>
             <input name="email" type="text" id="email" placeholder="Email *" required>
             <input name="email" type="text" id="email" placeholder="Address (optional)">
             <input type="submit" class="send_message transition" id="submit" value="Subscribe Now!">
