--- a/slideshow.html
+++ b/slideshow.html
@@ -289,7 +289,7 @@
 
       @media (max-height: 700px) {
         .name {
-          padding-bottom: 50;
+          padding-bottom: 10rem;
         }
       }
     </style>
